# m4b-go

./: LICENSE  README.md  pyproject.toml
cmd/: convert.go  merge.go
internal/chapter/: chapter.go  txt.go  txt_test.go
internal/convert/: convert.go
internal/ffmpeg/: convert.go  convert_test.go  probe.go  probe_test.go
internal/merge/: merge.go  merge_test.go
internal/tag/: tag.go  tag_test.go
src/hearworm/: auth.py  chapter.py  chapters.py  cli.py  convert.py  download.py  ffmpeg.py  library.py  merge.py  split.py  tag.py
